---
title: edu.nust.engine.core.debug
config:
  look: classic
  layout: elk
  flowchart:
    curve: linear
  class:
    defaultRenderer: dagre-wrapper
---
classDiagram
  class DebugPoint
  class DebugEllipse
  class DebugRectangle
  class DebugShape
DebugShape <|-- DebugEllipse : extends
DebugShape <|-- DebugPoint : extends
DebugShape <|-- DebugRectangle : extends